--- a/src/app/book-list/book-form/book-form.component.html
+++ b/src/app/book-list/book-form/book-form.component.html
@@ -1,3 +1,16 @@
-<p>
-  book-form works!
-</p>
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <h2>Enregistrer un nouveau livre</h2>
+    <form (ngSubmit)="onSaveBook()" [formGroup]="bookForm">
+      <div class="form-group">
+        <label for="title">Titre</label>
+        <input class="form-control" formControlName="title" id="title" type="text">
+      </div>
+      <div class="form-group">
+        <label for="author">Auteur</label>
+        <input class="form-control" formControlName="author" id="author" type="text">
+      </div>
+      <button [disabled]="bookForm.invalid" class="btn btn-success" type="submit">Enregistrer</button>
+    </form>
+  </div>
+</div>
