--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,3 +1,19 @@
-<p>
-  book-list works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Vos livres</h2>
+    <div class="list-group">
+      <button (click)="onViewBook(i)"
+              *ngFor="let book of books; let i = index"
+              class="list-group-item">
+        <h3 class="list-group-item-heading">
+          {{book.title}}
+          <button (click)="onDeleteBook(book)" class="btn btn-default pull-right">
+            <span class="glyphicon glyphicon-minus"></span>
+          </button>
+        </h3>
+        <p class="list-group-item-text">{{book.author}}</p>
+      </button>
+    </div>
+    <button (click)="onNewBook()" class="btn btn-primary">Nouveau livre</button>
+  </div>
+</div>
