--- a/src/app/book-list/single-book/single-book.component.html
+++ b/src/app/book-list/single-book/single-book.component.html
@@ -1,3 +1,7 @@
-<p>
-  single-book works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>{{book.title}}</h1>
+    <h3>{{book.author}}</h3>
+    <button (click)="onBack()" class="btn btn-default">Retour</button>
+  </div>
+</div>
