--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,14 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li routerLinkActive="active">
+      <li *ngIf="!isAuth" routerLinkActive="active">
         <a routerLink="auth/signup">Créer un compte</a>
       </li>
-      <li routerLinkActive="active">
+      <li *ngIf="!isAuth" routerLinkActive="active">
         <a routerLink="auth/signin">S'identifier</a>
+      </li>
+      <li>
+        <a (click)="onSignOut()" *ngIf="isAuth" style="cursor: pointer">Deconnexion</a>
       </li>
     </ul>
   </div>
